# rustbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  flake.nix
.cargo/: config.toml
.github/workflows/: release.yml
archival/: Cargo.toml  build.rs
archival/archive_viewer/: package-lock.json  package.json  watch.mjs
archival/archive_viewer/src/: global.d.ts  index.css  index.tsx  markdown.css  types.v1.ts
archival/src/: archival.rs  lib.rs
archive_viewer/: .prettierrc.json  build-config.mjs  build.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
archive_viewer/src/: global.d.ts  index.css  index.tsx  markdown.css  types.v1.ts
eh_bot/: Cargo.toml
eh_bot/src/: main.rs
src/: main.rs  utils.rs
utils/: Cargo.toml
utils/src/: component_tools.rs  confirmations.rs  error_handle.rs  into_edit.rs  lib.rs  messages_iter.rs  reporter.rs  web_files.rs  zip.rs
utils/src/web_files/: messaged.rs
wiper/: Cargo.toml
wiper/src/: lib.rs  wiping.rs
