[package]
resolver = "2"
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
poise_macros = "0.5.5"
tokio = { version = "1.28.1", features = ["full"] }
serde = "1.0.163"
serde_json = "1.0.96"
lazy_static = "1.4.0"
anyhow = "1.0.71"
rustc-hash = "1.1.0"
reqwest = { version = "0.11.18", features = ["serde_json"] }
futures = "0.3.28"
url = "2.4.0"
twemoji-assets = { version = "1.0", features = ["png", "names"] }
lazy-regex = "3.0.0"
walkdir = "2.3.3"
zip = "0.6.6"
tempfile = "3.6.0"
pluralizer = "0.4.0"

[profile.release]
# strip = true
opt-level = 3
lto = true
codegen-units = 1
