[workspace]
resolver = "2"
members = [
    "archival",
    "eh_bot",
    "utils",
    "wiper",
]

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
lazy-regex = "3"
num-traits = "0.2"
pluralizer = "0.4"
poise = "0.5"
reqwest = "0.11"
rustc-hash = "1"
serde = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", default-features = false }
twemoji-assets = "1"
url = "2"
walkdir = "2"
zip = "0.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# strip = true
opt-level = 3
lto = true
codegen-units = 1
