[workspace]
resolver = "2"
members = ["archival", "eh_bot", "utils", "wiper"]

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
duct = "0.13.6"
futures = "0.3"
lazy-regex = "3"
npm_rs = "1.0.0"
num-traits = "0.2"
pluralizer = "0.4"
poise = "0.6.1"
reqwest = "0.11.27"
rustc-hash = "2.1.0"
serde = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", default-features = false }
twemoji-assets = "1"
url = "2"
walkdir = "2"
zip = "2.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# strip = true
opt-level = 3
lto = true
codegen-units = 1
