[package]
name = "archival"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
lazy-regex = { workspace = true }
poise = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
twemoji-assets = { workspace = true, features = ["png", "names"] }
url = { workspace = true }
utils = { path = "../utils" }
wiper = { path = "../wiper" }

[build-dependencies]
duct = { workspace = true }
npm_rs = { workspace = true }

[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }
