[package]
name = "eh_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
poise_macros = "0.5.5"
tokio = { version = "1.28.1", features = ["full"] }
anyhow = "1.0.72"
archival = {path = "../archival"}