[package]
name = "eh_bot"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
archival = { path = "../archival" }
poise = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
