[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
poise_macros = "0.5.5"
tokio = { version = "1.28.1", features = ["fs"] }
futures = "0.3.28"
anyhow = "1.0.72"
walkdir = "2.3.3"
serde = "1.0.163"
serde_json = "1.0.96"
zip = "0.6.6"
reqwest = "0.11.18"
pluralizer = "0.4.0"